# resaerch01

./: .gitignore  AGI_AGENT_PLAN.md  ARCHITECTURE.md  BREAKTHROUGH_SUCCESS.md  CURRENT_STATUS.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_SUMMARY.md  README_AGI_PROJECT.md  WEEK1_COMPLETE_SUMMARY.md  WEEK1_DAY1_PROGRESS.md  test_agent_optimizer.py  test_conversational_agent.py  test_data_validation.py  test_mle_agent.py  test_orchestrator.py
complete_system/: .env.example  AUTONOMOUS_MCP_FIXES.md  COMPLETE_MCP_TEST_RESULTS.md  DATASET_ANALYSIS_REPORT.md  EXECUTION_SUMMARY.md  IMPLEMENTATION_STATUS.md  JUPYTER_MCP_CONNECTED.md  MISTRAL_AUTONOMOUS_EXECUTOR.md  ML_AUTONOMOUS_EXECUTOR.md  PHASE5_MCP_COMPLETE.md  PHASE6_FRONTEND_GUIDE.md  README.md  RUN_ALL_TESTS.py  SETUP_COMPLETE.md  START_HERE.md  aidas_system.py  autonomous_data_science_agent.py  backend_black_box_tests.py  complete_system_test_results.json  deep_analysis_user_datasets.py  (+27 more)
complete_system/llm-council/: .env.example  .gitignore  README.md  pyproject.toml  start.sh
complete_system/llm-council/backend/: config.py  main.py  multi_person_council.py  openrouter.py  personas.py  storage.py
complete_system/llm-council/frontend/: index.html  package.json
complete_system/llm-council/frontend/src/: App.css  App.jsx  api.js  index.css
complete_system/llm-council/frontend/src/components/: ChatInterface.css  ChatInterface.jsx  PersonaManager.css  PersonaManager.jsx  Sidebar.css  Sidebar.jsx
(+80 files in other folders)
